--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,25 +1,25 @@
 node('master')  
 {
-    stage('Contineous Download')
+    stage('Contineous Download-MASTER')
     {
         git 'https://github.com/intelliqittrainings/maven.git'
     }
 
-    stage('Contineous Build')
+    stage('Contineous Build-MASTER')
     {
         sh 'mvn package'
     }
-    stage('Contineous Deploy')
+    stage('Contineous Deploy-MASTER')
     {
         deploy adapters: [tomcat9(credentialsId: '93813005-152a-4a64-8995-4fa600482002', path: '', url: 'http://172.31.43.195:8080')], contextPath: 'testapp', war: '**/*.war'
     }
 
-    stage('Contineous Testing')
+    stage('Contineous Testing-MASTER')
     {
         git 'https://github.com/intelliqittrainings/FunctionalTesting.git'
         sh 'java -jar  /var/lib/jenkins/workspace/Scriptingpipeline/testing.jar '
     }
-    stage('Contineous Delivery')
+    stage('Contineous Delivery-MASTER')
     {
         deploy adapters: [tomcat9(credentialsId: '93813005-152a-4a64-8995-4fa600482002', path: '', url: 'http://172.31.45.30:8080')], contextPath: 'prodapp', war: '**/*.war'
     }
